--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,8 @@
 ---
 name: Build and Deploy container image to Amazon Lambda
 on:
-  pull_request:
+  # pull_request:
+  push:
     branches:
       - main
 
