--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,12 @@
 ---
 name: Build and Deploy container image to Amazon Lambda
 on:
-  # pull_request:
-  push:
+  pull_request:
     branches:
       - main
+  push:
+    branches:
+      - 'features/**'
 
 env:
   AWS_REGION: ap-northeast-1
