--- a/container/.cargo/config
+++ b/container/.cargo/config
@@ -1,2 +1,3 @@
 [target.aarch64-unknown-linux-musl]
-linker = "aarch64-linux-gnu-gcc"
+linker = "clang"
+rustflags = ["-C", "link-arg=-fuse-ld=mold"]
