--- a/container/Dockerfile
+++ b/container/Dockerfile
@@ -1,4 +1,4 @@
-FROM arm64v8/rust:1.64-slim-buster as build
+FROM arm64v8/rust:1.64-buster as build
 
 # RUN apt-get -y update && apt-get -y install libssl-dev pkg-config build-essential gcc-aarch64-linux-gnu
 # RUN apt-get -y update && apt-get -y install libssl-dev pkg-config build-essential gcc-aarch64-linux-gnu
