--- a/container/.cargo/config
+++ b/container/.cargo/config
@@ -1,3 +1,2 @@
 [target.aarch64-unknown-linux-musl]
-linker = "clang"
-rustflags = ["-C", "link-arg=-fuse-ld=mold"]
+linker = "aarch64-linux-gnu-gcc"
