--- a/container/.cargo/config
+++ b/container/.cargo/config
@@ -1,3 +1,6 @@
+# [target.x86_64-unknown-linux-musl]
+# linker = "clang"
+# rustflags = ["-C", "link-arg=-fuse-ld=mold"]
+
 [target.aarch64-unknown-linux-musl]
-linker = "clang"
-rustflags = ["-C", "link-arg=-fuse-ld=mold"]
+linker = "gcc-aarch64-linux-gnu"
