--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,6 +35,9 @@ jobs:
       - name: Setup buildx action
         uses: docker/setup-buildx-action@v2
 
+      - name: Setup mold
+        uses: rui314/setup-mold@v1
+
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
