--- a/container/.cargo/config
+++ b/container/.cargo/config
@@ -1,7 +1,7 @@
 [target.x86_64-unknown-linux-musl]
-linker = "/usr/bin/clang"
+linker = "clang"
 rustflags = ["-C", "link-arg=-fuse-ld=mold"]
 
 [target.aarch64-unknown-linux-musl]
-linker = "/usr/bin/clang"
+linker = "clang"
 rustflags = ["-C", "link-arg=-fuse-ld=mold"]
